--- a/todo.txt
+++ b/todo.txt
@@ -46,7 +46,6 @@ Engineering Tasks:
 To Do on current task:
 * Confirm that the ghost pointer moved in the second browser
 - Consider using npm module 'geckodriver' rather than downloading geckodriver manually
-- Update readme: explain installing gecko-driver, mention `brew install geckodriver`
-	- Update readme to reflect reproducibility issues with Selenium
-- BEFORE NEXT EPISODE
-	- try it: Nice test of asynchronous code in http://www.letscodejavascript.com/v3/comments/live/465#comment-3015324687
+
+- Viewer comments
+	- Nice test of asynchronous code in http://www.letscodejavascript.com/v3/comments/live/465#comment-3015324687
