--- a/todo.txt
+++ b/todo.txt
@@ -44,8 +44,9 @@ Engineering Tasks:
 * Update smoke tests for real-time networking
 
 To Do on current task:
-* Confirm that the ghost pointer moved in the second browser
+* Smoke test is failing on Windows
+- How can improve the smoke test code?
+	- What do we do about hardcoded ".ghost-pointer" class?
 - Consider using npm module 'geckodriver' rather than downloading geckodriver manually
-
 - Viewer comments
 	- Nice test of asynchronous code in http://www.letscodejavascript.com/v3/comments/live/465#comment-3015324687
