--- a/todo.txt
+++ b/todo.txt
@@ -26,12 +26,11 @@ Minimum Marketable Features:
 - more collaborative features?
 
 User Stories to finish current MMF:
-* see other users' mouse pointers
+* multi-user line drawing
+- multi-user clear button
 - send pointer events on touch, not just mouse move?
 - make mouse pointer disappear when it leaves drawing area?
 - make mouse pointer disappear when user disconnects
-- multi-user clear button
-- multi-user line drawing
 - version synchronization across client/server
 - offline handling
 - collision-handling / conflicts / race conditions
@@ -41,9 +40,11 @@ User Stories to finish current MMF:
 	- nsp, snyk
 
 Engineering Tasks:
-* Update smoke tests for real-time networking
+- Update client.js to send line drawing events to server
+- Update client.js to listen for line drawing events from server
+- Make new Client and Server event classes for line drawing
+- Modify RealTimeConnection to handle line drawing
+- Modify server to handle line drawing
 
 To Do on current task:
-* Consider using npm module 'geckodriver' rather than downloading geckodriver manually
-- Viewer comments
-	- Nice test of asynchronous code in http://www.letscodejavascript.com/v3/comments/live/465#comment-3015324687
+-
