--- a/todo.txt
+++ b/todo.txt
@@ -49,6 +49,7 @@ Engineering Tasks:
 	- Server vs. Client event names are confusing. Should be FromServerEvent and ToServerEvent or something equivalent
 	- A lot of duplication in server event tests. Tests are pretty ugly, too.
 	- RealTimeConnection - lots of duplication in event handling. Genericize it to not know about event details?
+	- RealTimeConnection test harness has lots of duplication
 
 To Do on current task:
 - Modify test harness client
