WIP: Client draws line segment when network draw event received

--- a/todo.txt
+++ b/todo.txt
@@ -40,8 +40,7 @@ User Stories to finish current MMF:
 	- nsp, snyk
 
 Engineering Tasks:
-* Update client.js to send line drawing events to server
-- Update client.js to listen for line drawing events from server
+* Update client.js to listen for line drawing events from server
 - Look for opportunities to improve the design--how can we make adding new behaviors inexpensive?
 	- Location (or Coordinate) object?
 	- ServerDrawEvent and ClientDrawEvent are exact duplicated :-/
