Client draws lines when network draw events received

--- a/todo.txt
+++ b/todo.txt
@@ -40,7 +40,8 @@ User Stories to finish current MMF:
 	- nsp, snyk
 
 Engineering Tasks:
-* Update client.js to listen for line drawing events from server
+* Why doesn't it work for real??
+- Improve client.js
 - Look for opportunities to improve the design--how can we make adding new behaviors inexpensive?
 	- Location (or Coordinate) object?
 	- ServerDrawEvent and ClientDrawEvent are exact duplicated :-/
