sendTouchEvent takes Touch[] instead of TouchList

--- a/todo.txt
+++ b/todo.txt
@@ -51,5 +51,6 @@ Engineering Tasks:
 	- RealTimeConnection test harness has lots of duplication
 
 To Do on current task:
-- NEXT EPISODE:
-	- Chrome touch events (ref E472 comments)
+- Firefox and MS Edge(?) touch events (ref E472 comments)
+	- create workaround for deprecated createTouch
+	- Mobile Safari requires createTouchList and does not work with array of touches
