--- a/todo.txt
+++ b/todo.txt
@@ -51,9 +51,8 @@ Engineering Tasks:
 	- Improve client.js
 
 To Do on current task:
-* Modify client.js to use sendEvent
-- getLastSentDrawEvent --> getLastSentEvent
-- remove getLastSentPointerLocation
+* remove getLastSentPointerLocation
+- Modify client.js to use sendEvent
 - remove sendPointerLocation
 - onDrawEvent --> onEvent
 - triggerDrawEvent --> triggerEvent
