--- a/todo.txt
+++ b/todo.txt
@@ -53,7 +53,4 @@ Engineering Tasks:
 	- Improve client.js
 
 To Do on current task:
-* onDrawEvent --> onEvent
-- remove onDrawEvent
-- remove onPointerLocation
-- triggerDrawEvent --> triggerEvent
+* triggerDrawEvent --> triggerEvent
