--- a/todo.txt
+++ b/todo.txt
@@ -53,4 +53,5 @@ Engineering Tasks:
 	- Improve client.js
 
 To Do on current task:
-* triggerDrawEvent --> triggerEvent
+* Remove triggerDrawEvent
+- Remove triggerPointerLocation
