--- a/todo.txt
+++ b/todo.txt
@@ -53,6 +53,5 @@ Engineering Tasks:
 	- Improve client.js
 
 To Do on current task:
-* Remove triggerDrawEvent
-- Modify triggerEvent to use event.name instead of eventConstructor.EVENT_NAME
+* Modify triggerEvent to use event.name instead of eventConstructor.EVENT_NAME
 - Remove triggerPointerLocation
