Remove duplication in server event reflection tests

--- a/todo.txt
+++ b/todo.txt
@@ -39,8 +39,7 @@ User Stories to finish current MMF:
 	- nsp, snyk
 
 Engineering Tasks:
-* Update server to reflect clear events from one browser to another
-- Update client.js to support clear button behavior
+* Update client.js to support clear button behavior
 - Look for opportunities to improve the design--how can we make adding new behaviors inexpensive?
 	- Location (or Coordinate) object?
 	- Server vs. Client event names are confusing. Should be FromServerEvent and ToServerEvent or something equivalent
@@ -48,5 +47,3 @@ Engineering Tasks:
 	- Improve client.js
 
 To Do on current task:
-* Review server code for opportunity to improve
-- Review tests for opportunity to improve
