Attempting to get client to remove pointer element on RemovePointerEvent

--- a/todo.txt
+++ b/todo.txt
@@ -39,11 +39,13 @@ User Stories to finish current MMF:
 	- nsp, snyk
 
 Engineering Tasks:
-* Update server to reflect that event back to other browsers
-- Respond to "RemovePointerEvent" in client.js
+* Respond to "RemovePointerEvent" in client.js
 - Send "RemovePointerEvent" when the mouse leaves the drawing area or window
 - Send pointer events on touch drawing
 - Send "RemovePointerEvent" when touch drawing stops
 
 To Do on current task:
--
+* Listen for RemovePointerEvent
+	- Why is event.id undefined?
+- Remove element from DOM
+- Remove element from ghostPointer map
