--- a/todo.txt
+++ b/todo.txt
@@ -39,8 +39,7 @@ User Stories to finish current MMF:
 	- nsp, snyk
 
 Engineering Tasks:
-- Send "RemovePointerEvent" when the mouse leaves the drawing area or window
-- Send pointer events on touch drawing
+* Send pointer events on touch drawing
 - Send "RemovePointerEvent" when touch drawing stops
 
 To Do on current task:
