Start of EventRepository for storing/replaying events on server

--- a/todo.txt
+++ b/todo.txt
@@ -58,4 +58,4 @@ Engineering Tasks:
 - Re-enable smoke tests' browser version check
 
 To Do on current task:
--
+- Rename DataModel to EventRepository?
