--- a/todo.txt
+++ b/todo.txt
@@ -50,6 +50,7 @@ User Stories to finish current MMF:
 - bug: ghost pointers block other actions
 	- e.g., starting a drag on top of a ghost pointer drags the pointer instead of drawing a line
 	- e.g., clicking clear button if ghost pointer is in the way prevents button from clicking
+	- investigate 'pointer-events: none' CSS
 - polish: make 'clear' button depress when clear event received?
 
 Engineering Tasks:
@@ -61,4 +62,9 @@ Engineering Tasks:
 - Re-enable smoke tests' browser version check
 
 To Do on current task:
+* Clean up our event replay server test
+	- Use socket.io's emit callback to determine when server receives events?
+	- Test that server doesn't send replay events to other clients as a separate test?
+- Discuss E502 comments
+
 - create test-only event?
