--- a/todo.txt
+++ b/todo.txt
@@ -54,13 +54,14 @@ User Stories to finish current MMF:
 - polish: make 'clear' button depress when clear event received?
 
 Engineering Tasks:
-* Extract 'RealTimeServer' from server.js?
-	- use that to clean up server tests
-	- Test that server doesn't send replay events to other clients as a separate test?
+- Move tests out of _server_tests.js to _http_server_test and _real_time_server_test.js
+- Make RealTimeServer.stop()?
+- Clean up server tests
 - Consider Jay Bazuzi's suggestions from E494 - direct connection from client to server when testing
 	- this implies a replaceable transport layer
 - Fix 'reflectClients' duplication?
 	- standardize toServerEvent signature so that there's no duplication needed
+- Test that server doesn't send replay events to other clients as a separate test?
 - Re-enable smoke tests' browser version check
 
 To Do on current task:
