--- a/todo.txt
+++ b/todo.txt
@@ -54,8 +54,12 @@ User Stories to finish current MMF:
 - polish: make 'clear' button depress when clear event received?
 
 Engineering Tasks:
-- Test that server doesn't send replay events to other clients as a separate test?
+* Test that server doesn't send replay events to other clients as a separate test?
 - Re-enable smoke tests' browser version check
 
 To Do on current task:
+* Add realTimeServer.stop()
+	- Figure out how to tell if the server stopped
+		- Figure out how many connections are active
+- Debug race condition in handleClientEvent() test
 - Consider Martin Grandrath's Socket.IO initialization suggestion, E509
