Attempting to clean up numberOfActiveConnections() test

--- a/todo.txt
+++ b/todo.txt
@@ -60,6 +60,6 @@ Engineering Tasks:
 To Do on current task:
 * Add realTimeServer.stop()
 	- Figure out how to tell if the server stopped
-		- Figure out how many connections are active
+		- Clean up 'active connections test'
 - Debug race condition in handleClientEvent() test
 - Consider Martin Grandrath's Socket.IO initialization suggestion, E509
