Finish attempting to reproduce closeSocket() race condition--didn't work

--- a/todo.txt
+++ b/todo.txt
@@ -18,6 +18,7 @@ We haven't yet resolved this. Current best guess is that it's a bug in Socket.IO
 
 TO DO:
 * Reproduce issue #1 in a standalone test case and submit to Socket.IO
-* Reproduce issue #2 in a standalone test case
-	* Submit to Socket.IO
-	* Debug Socket.IO to see if this if there's a workaround. (Can we use Engine.IO instead?)
+	* Why does our spike succeed when our test fails?
+- Reproduce issue #2 in a standalone test case
+	- Submit to Socket.IO
+	- Debug Socket.IO to see if this if there's a workaround. (Can we use Engine.IO instead?)
